// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should render with free shipping 1`] = `
<div>
  <div
    class="container"
    data-testid="item"
  >
    <div>
      <img
        alt="title"
        class="itemImage"
        src="a.jpg"
      />
    </div>
    <div
      class="information"
    >
      <div>
        <div
          class="priceContainer"
        >
          <h1
            class="price price"
          >
            <span
              class="currencyCode"
            >
              $
            </span>
            <span>
              300
            </span>
            <span
              class="decimals"
            >
              50
            </span>
          </h1>
          <img
            alt="Free shipping"
            class="shippingImage"
            src="/assets/ic_shipping@2x.png.png.png"
          />
        </div>
        <h3>
          title
        </h3>
        <h3>
          new
        </h3>
      </div>
      <div>
        <span
          class="address"
        >
          address
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render without free shipping 1`] = `
<div>
  <div
    class="container"
    data-testid="item"
  >
    <div>
      <img
        alt="title"
        class="itemImage"
        src="a.jpg"
      />
    </div>
    <div
      class="information"
    >
      <div>
        <div
          class="priceContainer"
        >
          <h1
            class="price price"
          >
            <span
              class="currencyCode"
            >
              $
            </span>
            <span>
              300
            </span>
            <span
              class="decimals"
            >
              50
            </span>
          </h1>
        </div>
        <h3>
          title
        </h3>
        <h3>
          new
        </h3>
      </div>
      <div>
        <span
          class="address"
        >
          address
        </span>
      </div>
    </div>
  </div>
</div>
`;
